tests/paczka1/small_fuzzy/70881880.err
Error in line 1: IEVLNuBDm A87 89,0
Error in line 3: IEVLNuBDm A381 45,9
Error in line 4: JY3R A87 13,8
